// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowTitleAndText renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "marginVertical": 3.75,
    }
  }
  testID="show-title-and-text"
>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "alignItems": "flex-start",
        "color": "#545E6B",
        "fontFamily": "FiraSans-Light",
        "fontSize": 15,
        "fontWeight": "400",
        "marginHorizontal": 3.75,
        "paddingBottom": 3.75,
      }
    }
    testID="text-label"
  />
  <Text
    ellipsizeMode="middle"
    style={
      {
        "color": "#545E6B",
        "fontFamily": "FiraSans-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "marginBottom": 7.5,
        "marginHorizontal": 3.75,
      }
    }
    testID="text-label"
  />
</View>
`;

exports[`ShowTitleAndText renders correctly with isSubtextHighlighted 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "marginVertical": 3.75,
    }
  }
  testID="show-title-and-text"
>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "alignItems": "flex-start",
        "color": "#545E6B",
        "fontFamily": "FiraSans-Light",
        "fontSize": 15,
        "fontWeight": "400",
        "marginHorizontal": 3.75,
        "paddingBottom": 3.75,
      }
    }
    testID="text-label"
  />
  <Text
    ellipsizeMode="middle"
    style={
      {
        "color": "#1b87e6",
        "fontFamily": "FiraSans-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "marginBottom": 7.5,
        "marginHorizontal": 3.75,
      }
    }
    testID="text-label"
  />
</View>
`;

exports[`ShowTitleAndText renders correctly with subText 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "marginVertical": 3.75,
    }
  }
  testID="show-title-and-text"
>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "alignItems": "flex-start",
        "color": "#545E6B",
        "fontFamily": "FiraSans-Light",
        "fontSize": 15,
        "fontWeight": "400",
        "marginHorizontal": 3.75,
        "paddingBottom": 3.75,
      }
    }
    testID="text-label"
  />
  <Text
    ellipsizeMode="middle"
    style={
      {
        "color": "#545E6B",
        "fontFamily": "FiraSans-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "marginBottom": 7.5,
        "marginHorizontal": 3.75,
      }
    }
    testID="text-label"
  >
    subText
  </Text>
</View>
`;

exports[`ShowTitleAndText renders correctly with title 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "marginVertical": 3.75,
    }
  }
  testID="show-title-and-text"
>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "alignItems": "flex-start",
        "color": "#545E6B",
        "fontFamily": "FiraSans-Light",
        "fontSize": 15,
        "fontWeight": "400",
        "marginHorizontal": 3.75,
        "paddingBottom": 3.75,
      }
    }
    testID="text-label"
  >
    title
  </Text>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "color": "#545E6B",
        "fontFamily": "FiraSans-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "marginBottom": 7.5,
        "marginHorizontal": 3.75,
      }
    }
    testID="text-label"
  />
</View>
`;

exports[`ShowTitleAndText renders correctly with title and subText 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "marginVertical": 3.75,
    }
  }
  testID="show-title-and-text"
>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "alignItems": "flex-start",
        "color": "#545E6B",
        "fontFamily": "FiraSans-Light",
        "fontSize": 15,
        "fontWeight": "400",
        "marginHorizontal": 3.75,
        "paddingBottom": 3.75,
      }
    }
    testID="text-label"
  >
    title
  </Text>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "color": "#545E6B",
        "fontFamily": "FiraSans-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "marginBottom": 7.5,
        "marginHorizontal": 3.75,
      }
    }
    testID="text-label"
  >
    subText
  </Text>
</View>
`;

exports[`ShowTitleAndText renders correctly with title, subText and isSubtextHighlighted 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "marginVertical": 3.75,
    }
  }
  testID="show-title-and-text"
>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "alignItems": "flex-start",
        "color": "#545E6B",
        "fontFamily": "FiraSans-Light",
        "fontSize": 15,
        "fontWeight": "400",
        "marginHorizontal": 3.75,
        "paddingBottom": 3.75,
      }
    }
    testID="text-label"
  >
    title
  </Text>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "color": "#1b87e6",
        "fontFamily": "FiraSans-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "marginBottom": 7.5,
        "marginHorizontal": 3.75,
      }
    }
    testID="text-label"
  >
    subText
  </Text>
</View>
`;

exports[`ShowTitleAndText should render correctly with title, subText and isSubtextHighlighted 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "marginVertical": 3.75,
    }
  }
  testID="show-title-and-text"
>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "alignItems": "flex-start",
        "color": "#545E6B",
        "fontFamily": "FiraSans-Light",
        "fontSize": 15,
        "fontWeight": "400",
        "marginHorizontal": 3.75,
        "paddingBottom": 3.75,
      }
    }
    testID="text-label"
  >
    title
  </Text>
  <Text
    ellipsizeMode="middle"
    style={
      {
        "color": "#1b87e6",
        "fontFamily": "FiraSans-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "marginBottom": 7.5,
        "marginHorizontal": 3.75,
      }
    }
    testID="text-label"
  >
    subText
  </Text>
</View>
`;
